增加模板