@@ -59,8 +59,7 @@ public class MapUtil {
                     return (Boolean) answer;
 
                 } else if (answer instanceof String) {
-                    return new Boolean((String) answer);
-
+                    return Boolean.parseBoolean((String) answer);
                 } else if (answer instanceof Number) {
                     Number n = (Number) answer;
                     return (n.intValue() != 0) ? Boolean.TRUE : Boolean.FALSE;
@@ -110,7 +109,7 @@ public class MapUtil {
         } else if (answer instanceof Byte) {
             return (Byte) answer;
         }
-        return new Byte(answer.byteValue());
+        return Byte.valueOf(answer.byteValue());
     }
 
     /**
@@ -126,7 +125,7 @@ public class MapUtil {
         } else if (answer instanceof Short) {
             return (Short) answer;
         }
-        return new Short(answer.shortValue());
+        return Short.valueOf(answer.shortValue());
     }
 
     /**
@@ -142,7 +141,7 @@ public class MapUtil {
         } else if (answer instanceof Integer) {
             return (Integer) answer;
         }
-        return new Integer(answer.intValue());
+        return Integer.valueOf(answer.intValue());
     }
 
     /**
@@ -158,7 +157,7 @@ public class MapUtil {
         } else if (answer instanceof Long) {
             return (Long) answer;
         }
-        return new Long(answer.longValue());
+        return Long.valueOf(answer.longValue());
     }
 
     /**
@@ -174,7 +173,7 @@ public class MapUtil {
         } else if (answer instanceof Float) {
             return (Float) answer;
         }
-        return new Float(answer.floatValue());
+        return Float.valueOf(answer.floatValue());
     }
 
     /**
@@ -190,7 +189,7 @@ public class MapUtil {
         } else if (answer instanceof Double) {
             return (Double) answer;
         }
-        return new Double(answer.doubleValue());
+        return Double.valueOf(answer.doubleValue());
     }
 
 }
